--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,8 @@
 theme: jekyll-theme-slate
+# title: [The title of your site]
+title: A draft NIEM metamodel
+# description: [A short description of your site's purpose]
+description: A data model for data definitions conformant to NIEM
+# show_downloads: ["true" or "false" to indicate whether to provide a download URL]
+show_downloads: false
+# google_analytics: [Your Google Analytics tracking ID]
