--- a/metamodel-core/Makefile.in
+++ b/metamodel-core/Makefile.in
@@ -29,7 +29,8 @@ reports_dir = ${builddir}/reports
 valid_files = \
   ${tokens_dir}/valid-xml/metamodel.xml \
   ${tokens_dir}/valid-xsd/metamodel.xml \
-  ${tokens_dir}/valid-sch/metamodel.xml \
+  ${tokens_dir}/valid-rules-niem/metamodel.xml \
+  ${tokens_dir}/valid-rules-model/metamodel.xml \
 
 .DEFAULT_GOAL = all
 
@@ -54,24 +55,39 @@ ${tokens_dir}/valid-xsd/%: ${srcdir}/%
 	touch $@
 
 # Schematron validation
-${tokens_dir}/valid-sch/%: ${srcdir}/% ${builddir}/metamodel.sch.xsl ${builddir}/functions.xsl
-	${MKDIR_P} ${dir ${reports_dir}/valid-xsd/$*}
-	${schematron_execute} --xslt-file=${builddir}/metamodel.sch.xsl $< 2>&1 | tee ${reports_dir}/valid-xsd/$*
+${tokens_dir}/valid-rules-niem/%: ${srcdir}/% ${builddir}/rules-niem.sch.xsl ${builddir}/functions-niem.xsl ${builddir}/functions-xml.xsl
+	${MKDIR_P} ${dir ${reports_dir}/valid-rules-niem/$*}
+	${schematron_execute} --xslt-file=${builddir}/rules-niem.sch.xsl $< 2>&1 | tee ${reports_dir}/valid-rules-niem/$*
 	${MKDIR_P} ${dir $@}
 	touch $@
 
-${builddir}/metamodel.sch.xsl: ${srcdir}/metamodel.sch
+# Schematron validation
+${tokens_dir}/valid-rules-model/%: ${srcdir}/% ${builddir}/rules-model.sch.xsl ${builddir}/functions-model.xsl ${builddir}/functions-niem.xsl ${builddir}/functions-xml.xsl
+	${MKDIR_P} ${dir ${reports_dir}/valid-rules-model/$*}
+	${schematron_execute} --xslt-file=${builddir}/rules-model.sch.xsl $< 2>&1 | tee ${reports_dir}/valid-rules-model/$*
 	${MKDIR_P} ${dir $@}
-	${MKDIR_P} ${dir ${reports_dir}/$*}
-	${schematron_compile} --output-file=$@ $< 2>&1 | tee ${reports_dir}/metamodel.sch.xsl
+	touch $@
 
-${builddir}/functions.xsl: ${srcdir}/functions.xsl
+${builddir}/%.sch.xsl: ${srcdir}/%.sch
+	@ ${MKDIR_P} ${dir $@}
+	@ ${MKDIR_P} ${dir ${reports_dir}/$*.sch.xsl}
+	${schematron_compile} --output-file=$@ $< 2>&1 | tee ${reports_dir}/$*.sch.xsl
+
+${builddir}/functions-model.xsl: ${srcdir}/functions-model.xsl
 	${INSTALL_DATA} $< $@
+
+${builddir}/functions-niem.xsl: ${srcdir}/functions-niem.xsl
+	${INSTALL_DATA} $< $@
+
+${builddir}/functions-xml.xsl: ${srcdir}/functions-xml.xsl
+	${INSTALL_DATA} $< $@
+
 
 .PHONY: clean
 clean:
 	${RM} -rf ${builddir}/reports ${builddir}/tokens
-	${RM} ${builddir}/metamodel.sch.xsl ${builddir}/functions.xsl
+	${RM} ${builddir}/functions-model.xsl ${builddir}/functions-niem.xsl ${builddir}/functions-xml.xsl
+	${RM} ${builddir}/rules-model.sch.xsl ${builddir}/rules-niem.sch.xsl
 
 .PHONY: help #   Print this help
 help:
