Simplified Makefile to drive sub-directories.

--- a/Makefile.in
+++ b/Makefile.in
@@ -6,115 +6,32 @@ this_makefile := ${lastword ${MAKEFILE_LIST}}
 SHELL = @bash@ -o pipefail -o errexit -o nounset
 .SECONDARY:
 
-#
+#############################################################################
 
-abs_top_builddir = @abs_top_builddir@
-abs_top_srcdir = @abs_top_srcdir@
-tmp_dir = @tmp_dir@
-generated_dir = @generated_dir@
 builddir = @builddir@
-srcdir = @srcdir@
 
+SED = @SED@
 
+#############################################################################
 
-png_target_files = ${patsubst %.dot,generated/%.png,${wildcard *.dot}}
+.DEFAULT_GOAL = all
 
-targets = \
-  docs/niem-metamodel.png \
-  docs/NIEM-Metamodel.pptx \
-  tmp/token/xml/metamodel.xml \
-  tmp/token/valid-xsd/metamodel.xml \
-  tmp/token/valid-sch/metamodel.xml \
-  tmp/token/generated-xsd \
-  tmp/token/valid-xsd-generated/metamodel.xml \
-  ${png_target_files} \
+.PHONY: all #   Build everything
+all:
 
-.PHONY: default
-default: ${targets}
+.PHONY: valid #   Validate what you can
+valid:
+	${MAKE} -C ${builddir}/metamodel-core ${MAKE_FLAGS} valid
 
-.PHONY: png
-png: ${png_target_files}
-
-.PHONY: vxsd
-vxsd: tmp/token/valid-xsd/metamodel.xml
-
-.PHONY: v2
-v2: xsd
-	xs-validate -c xml-catalog-generated.xml metamodel.xml
-
-.PHONY: sch
-sch: tmp/token/valid-sch/metamodel.xml
-
-tmp/augmented.xml: tmp/restacked.xml augment.xsl functions.xsl
-	mkdir -p ${dir $@}
-	saxon --in=$< --out=$@ --xsl=augment.xsl
-
-tmp/restacked.xml: metamodel.xml restack.xsl functions.xsl
-	mkdir -p ${dir $@}
-	saxon --in=$< --out=$@ --xsl=restack.xsl
-
-tmp/token/generated-xsd: metamodel.xml generate-xsd.xsl functions.xsl
-	rm -rf generated/xsd
-	mkdir -p generated/xsd
-	saxon --in=metamodel.xml --xsl=generate-xsd.xsl
-	mkdir -p ${dir $@}
-	touch $@
-
-tmp/token/valid-xsd-generated/%.xml: %.xml tmp/token/generated-xsd xml-catalog-generated.xml ${shell find niem -type f}
-	xs-validate -c xml-catalog-generated.xml $<
-	mkdir -p ${dir $@}
-	touch $@
-
-.PHONY: xsd
-xsd:
-	rm -rf generated/xsd tmp/token/generated-xsd 
-	${MAKE} tmp/token/generated-xsd
-
-generated/%.png: %.dot
-	mkdir -p ${dir $@}
-	dot -Tpng -o$@ $<
-
-tmp.metamodel.sch.xsl: metamodel.sch functions.xsl
-	schematron-compile --output-file=$@ $<
-
-tmp/token/valid-sch/%: % tmp.metamodel.sch.xsl functions.xsl
-	schematron-execute --xslt-file=tmp.metamodel.sch.xsl $<
-	mkdir -p ${dir $@}
-	touch $@
-
-tmp/token/valid-xsd/%: %
-	xs-validate -c xml-catalog.xml $<
-	mkdir -p ${dir $@}
-	touch $@
-
-.PHONY: clean
+.PHONY: clean #   Remove build products
 clean:
-	${RM} -rf tmp generated
-	${RM} ${wildcard tmp.*}
+	${MAKE} -C ${builddir}/metamodel-core ${MAKE_FLAGS} clean
 
-# conformance check
-cc: tmp/token/generated-xsd
-	schematron-execute --xslt-file=../ndr/artifacts/repo/ndr-rules-conformance-target-ref.sch.xsl generated/xsd/mm.xsd
+.PHONY: help #   Print this help
+help:
+	@ ${SED} -e '/^\.PHONY:/s/^\.PHONY: *\([^ #]*\) *\#\( *\)\([^ ].*\)/\2\1: \3/p;/^[^#]*#HELP:/s/[^#]*#HELP:\(.*\)/\1/p;d' ${this_makefile}
 
+# don't put anything after this
 
-# xml via xmllint check
-tmp/token/xml/%: %
-	xmllint --noout $<
-	mkdir -p ${dir $@}
-	touch $@
-
-docs/niem-metamodel.png: metamodel-tb.dot
-	mkdir -p ${dir $@}
-	dot -Tpng -o$@ $<
-
-# output format: pptx
-# input: markdown_strict
-# doesn't work well:	  --reference-doc=reference.pptx
-docs/NIEM-Metamodel.pptx: slides.md reference.pptx generated/metamodel-core.png
-	mkdir -p ${dir $@}
-	pandoc \
-	  --to=pptx --output=$@ \
-	  --reference-doc=reference.pptx \
-	  --from=markdown_strict+yaml_metadata_block $< \
 
 
