--- a/configure.ac
+++ b/configure.ac
@@ -22,6 +22,7 @@ AC_DEFUN([check_prog_options],[AC_PATH_PROGS($1,$2)
 
 check_prog(bash)
 check_prog(dot)
+check_prog(m4)
 check_prog(xmllint)
 check_prog_options(xs_validate,xs-validate)
 check_prog_options(schematron_compile,schematron-compile)
@@ -33,7 +34,7 @@ test "x$saxon" = "x" && AC_MSG_ERROR([saxon not found])
 #AC_PATH_PROG([xmllint],[xmllint],[xmllint])
 
 AC_CONFIG_FILES([Makefile], [chmod 444 Makefile])
-AC_CONFIG_FILES([docs/Makefile], [chmod 444 docs/Makefile])
+AC_CONFIG_FILES([docs-src/Makefile], [chmod 444 docs-src/Makefile])
 AC_CONFIG_FILES([metamodel-core/Makefile], [chmod 444 metamodel-core/Makefile])
 AC_SUBST([config_files],$ac_config_files)
 AC_OUTPUT
