Added docs-src to directories to 'make clean'.

--- a/Makefile.in
+++ b/Makefile.in
@@ -30,6 +30,7 @@ valid:
 .PHONY: clean #   Remove build products
 clean:
 	${RM} -r xsd
+	${MAKE} -C ${builddir}/docs-src ${MAKE_FLAGS} clean
 	${MAKE} -C ${builddir}/metamodel-core ${MAKE_FLAGS} clean
 
 #############################################################################
